
Added school_name to Education
Added name to Employee
Added department to Employee
Removed supervisorID from Supervisor
Added cause to RepairedSensor
Added repair to RepairedSensor (what was done to repair the sensor)
from EmployeeAccessRights
  remove securityclearance 
  remove title 
  add roomID, startTime, endTime, directorID, startDate, endDate
remove mainGateTimes from Badge
change Building to Door
add doorID to Door PRIMARY KEY (doorID)
change SensoredBuilding to Building
add name to Building
remove sensorID from Building

new EmployeeEducation(employeeID(PK), degree(PK), school_name, startDate, endDate, GPA)
remove Education

changed Location table to Address
changed locationID to employeeID in Address

changed EmployeeEducation to Education