@@ -1,3 +1,3 @@
 var/*.db
 *.db
-__pycache__/
+__pycache__/*
